--- a/Pro1/templates/home.html
+++ b/Pro1/templates/home.html
@@ -1,105 +1,120 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>AudioSphere</title>
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
-    <link rel="stylesheet" href="../static/style1.css">
-    <script src="player.js"></script>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;500;700&display=swap" rel="stylesheet">
 
-    </head>
-    <body>
-        <div class="nav">
-            <div class="logo">
-                <img src="../static/LogoOnlyWhite.png" class="img"></img>
-                <p class="title">AudioSphere</p>
-            </div>
-            <div class="menu">
-                <p>Menu</p>
-                <div class="menu-items">
-                    <div class="menu-item-sep" id="menu-home">
-                        <i class="fa-solid fa-house"></i>
-                        <a class="menu-button" href="home.html">Home</a>
-                    </div>
-                    <div class="menu-item-sep">
-                        <i class="fa-solid fa-grip"></i>
-                        <a class="menu-button1" href="genres.html">Genre</a>
-                    </div>
-                    <div class="menu-item-sep">
-                        <i class="fa-solid fa-user-large"></i>
-                        <a class="menu-button1" href="artist.html">Artist</a>
-                    </div>
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='style1.css') }}">
+</head>
+<body>
+
+    <!-- Sidebar Navigation -->
+    <div class="nav">
+        <div class="logo">
+            <img src="{{ url_for('static', filename='LogoOnlyWhite.png') }}" class="img">
+            <p class="title">AudioSphere</p>
+        </div>
+        <div class="menu">
+            <p>Menu</p>
+            <div class="menu-items">
+                <div class="menu-item-sep">
+                    <i class="fa-solid fa-house"></i>
+                    <a class="menu-button" href="{{ url_for('home') }}">Home</a>
+                </div>
+                <div class="menu-item-sep">
+                    <i class="fa-solid fa-grip"></i>
+                    <a class="menu-button1" href="{{ url_for('genres') }}">Genre</a>
+                </div>
+                <div class="menu-item-sep">
+                    <i class="fa-solid fa-user-large"></i>
+                    <a class="menu-button1" href="{{ url_for('artists') }}">Artist</a>
                 </div>
             </div>
         </div>
-        <div class="content">
-            <div class="search-login">
-                <div class="search">
-                    <form action="{{ url_for('search_songs') }}" method="POST">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <input type="text" name="query" class="search-input" placeholder="Search by songs, artist album ... ">
-                    </form>
-                </div>
-            </div>
+    </div>
 
-            <div class="welcome">
-                <p class="hello">Hello</p>
+    <!-- Main Content -->
+    <div class="content">
+        <div class="search-login">
+            <div class="search">
+                <form action="{{ url_for('search_songs') }}" method="POST">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <input type="text" name="query" class="search-input" placeholder="Search by songs, artist, album...">
+                </form>
             </div>
-            <p class="recommend">Recommended for you</p>
+        </div>
 
+        <div class="welcome">
+            <p class="hello">Hello</p>
+        </div>
+        <p class="recommend">Recommended for you</p>
+
+        <!-- Song List -->
         <div class="songs">
             {% if songs %}
                 {% for song in songs %}
-                <div class="song-box" onclick="playSong('{{ song['song_url'] }}', ' {{ song['name'] }} ','{{ song['artist'] }}','{{ song['photo_url'] }}')">
-                       <img src="{{ song['photo_url'] }}"  class="song-photo">   
-                        <p class="song-name">{{ song['name'] }}</p>
-                        <p class="artist-name">{{ song['artist'] }}</p>
-                </div>
+                    <div class="song-box" onclick="playSong('{{ song.song_url }}', '{{ song.name }}', '{{ song.artist }}', '{{ song.photo_url }}')">
+                        <img src="{{ song.photo_url }}" class="song-photo">
+                        <p class="song-name">{{ song.name }}</p>
+                        <p class="artist-name">{{ song.artist }}</p>
+                    </div>
                 {% endfor %}
             {% else %}
                 <p>No songs found.</p>
             {% endif %}
         </div>
-         <hr>
-            <div class="creators">
-                <p class="created-by">Created By</p>
-                <div class="creator-names">
-                    <a target="_blank" href="https://www.linkedin.com/in/abhilash-m-35ab682a2?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">ABHILASH MELLACHERUVU</a>
-                    <a target="_blank" href="https://www.linkedin.com/in/siddartha-kallampalli-a8982a2a3?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">SIDDARTHA KALLAMPALLI</a>
-                </div>
+
+        <hr>
+
+        <!-- Creators -->
+        <div class="creators">
+            <p class="created-by">Created By</p>
+            <div class="creator-names">
+                <a target="_blank" href="https://www.linkedin.com/in/abhilash-m-35ab682a2">ABHILASH MELLACHERUVU</a>
+                <a target="_blank" href="https://www.linkedin.com/in/siddartha-kallampalli-a8982a2a3">SIDDARTHA KALLAMPALLI</a>
             </div>
         </div>
-        <div class="player">
-            <img id="song-photo" class="song-photo-player" src="">
-            <div class="info-audio">
-                <div id="song-info" class="player-info">
-                    <p id="song-name" class="song-name-player"></p>
-                    <p id="artist-name" class="artist-name-player"></p>
-                </div>
-                <div class="audio-player">
-                    <audio id="myaudio" controls >
-                    </audio>
-                </div>
+    </div>
+
+    <!-- Audio Player -->
+    <div class="player">
+        <img id="song-photo" class="song-photo-player" src="">
+        <div class="info-audio">
+            <div id="song-info" class="player-info">
+                <p id="song-name" class="song-name-player"></p>
+                <p id="artist-name" class="artist-name-player"></p>
+            </div>
+            <div class="audio-player">
+                <audio id="myaudio" controls>
+                    Your browser does not support the audio element.
+                </audio>
             </div>
         </div>
+    </div>
 
-        <script>
-            function playSong(url,name,artist,photo) {
-                var audioPlayer = document.getElementById('myaudio');
-                var songName = document.getElementById('song-name');
-                var artistName = document.getElementById('artist-name');
-                var songPhoto = document.getElementById('song-photo');
+    <!-- Play Song JS -->
+    <script>
+        function playSong(url, name, artist, photo) {
+            const audioPlayer = document.getElementById('myaudio');
+            const songName = document.getElementById('song-name');
+            const artistName = document.getElementById('artist-name');
+            const songPhoto = document.getElementById('song-photo');
 
-                audioPlayer.src = url;
-                audioPlayer.play();
+            audioPlayer.src = url;
+            audioPlayer.play();
 
-                songName.textContent = name;
-                artistName.textContent = artist;
-                songPhoto.src = photo;
-            }
-        </script>
-        </script> 
-    </body>
+            songName.textContent = name;
+            artistName.textContent = artist;
+            songPhoto.src = photo;
+        }
+    </script>
+
+</body>
 </html>
